chore(recruitment): 채용 형태 반환 값을 정규직, 비정규직으로 반환한다.